# BscAdamJelinski

./: .gitmodules  README.md
pointcloud_downsampler/: CMakeLists.txt  package.xml
pointcloud_downsampler/src/: downsampler.cpp
web_robot_control/: build_frontend.sh  package.xml  setup.cfg  setup.py
web_robot_control/config/: config.yaml  example_config.yaml
web_robot_control/config/tests/: integration_1.yaml  integration_2.yaml  latency.yaml  unit_1.yaml  unit_2.yaml  unit_3.yaml  unit_4.yaml  unit_5_1.yaml  unit_5_2.yaml  unit_6.yaml
web_robot_control/frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.mts
web_robot_control/frontend/patches/: @types__roslib.patch
web_robot_control/frontend/public/: config.yaml
web_robot_control/frontend/src/: App.vue
web_robot_control/frontend/src/components/: AppBar.vue  AppFooter.vue
web_robot_control/frontend/src/core/: roslibExtensions.ts
web_robot_control/frontend/src/layouts/: default.vue
web_robot_control/frontend/src/pages/: index.vue
web_robot_control/frontend/src/plugins/: index.ts  vuetify.ts
web_robot_control/frontend/src/stores/: app.ts  ros.ts
web_robot_control/frontend/src/ui/3D/: RenderController.ts  VRNavigation.ts  VRPositionPublisher.ts  robotLoader.ts  types.ts  urdfLoader.ts  urdfParser.ts
web_robot_control/frontend/src/ui/3D/topicVisualisation/: geometry_msgs_posestamped.ts  index.ts  nav_msgs_occupancygrid.ts  (+5 more)
web_robot_control/frontend/src/ui/assets/: ProjectLogo.vue
web_robot_control/frontend/src/ui/components/: AppBar.vue  WindowBorder.vue
web_robot_control/frontend/src/ui/screens/: MainScreen.vue
web_robot_control/frontend/src/ui/windows/: RenderController.ts  ThreeDRenderWindow.vue  VRNavigation.ts  urdfLoader.ts
web_robot_control/launch/: backend.launch  example.launch  tiago_gazebo.launch
web_robot_control/meshes/: pal_office_clean.dae
web_robot_control/web_robot_control/: certificate_manager.py  mesh_publisher.py  server.py
(+17 files in other folders)
