<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>web_robot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adas.jelinski@gmail.com">Adam Jeliński</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>wget</build_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tf2_web_republisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <depend>rosbridge_server</depend>

  <depend>joint_state_publisher_gui</depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>python3-cryptography</exec_depend>
</package>
